fix spacing

--- a/frontend/src/styles/global/_header.scss
+++ b/frontend/src/styles/global/_header.scss
@@ -1,16 +1,13 @@
 header {
-  min-height: 187px;
-
-  @media screen and (max-width: ($tablet-md)) {
-    min-height: 135px;
-  }
-
   &.header {
     background-color: $white;
     width: 100%;
     z-index: 12;
+    min-height: 187px;
 
     @media screen and (max-width: ($tablet-md)) {
+      min-height: 135px;
+
       background-color: $dark-blue;
       color: $white;
     }
